Fix font on safari mobile

--- a/mypiratename.css
+++ b/mypiratename.css
@@ -1,7 +1,6 @@
 @font-face {
-  font-family: BlackwoodCastle;
-  src: local("BlackwoodCastle")
-       url(BLACC__.ttf);
+  font-family: "BlackwoodCastle";
+  src: local("BlackwoodCastle") url(BLACC__.ttf);
 }
 
 h1 {
